Galeria proyectos- agregar proyectos

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -37,15 +37,49 @@ plantilla.acerca=About
 plantilla.proyectos=Projects
 plantilla.idioma=Languaje
 plantilla.contacto=Contact
+plantilla.galeria=Projects Galery
+plantilla.servicio1=Architecture and Engineering
+plantilla.servicio1P=We offer a variety of services in professional consulting for Architecture and Engineering to help you start your project.
+plantilla.servicio1L1=Construction Plans
+plantilla.servicio1L2=Preliminary Studies
+plantilla.servicio1L3=Architectural Design
+plantilla.servicio1L4=Structural Design
+plantilla.servicio2=Construction
+plantilla.servicio2P=We work under either a turnkey or management model. In both models, we provide a formal offer that defines all the construction characteristics and materials of the project, offering flexibility in the finishing details for the client to choose the final touches.
+plantilla.servicio2L1=New Constructions
+plantilla.servicio2L2=Extensions
+plantilla.servicio2L3=Renovations
+plantilla.servicio2L4=Electrical Installations
+plantilla.servicio2L5=Mechanical Installations
+plantilla.servicio3=Procedure and Advice
+plantilla.servicio3P=We offer a variety of professional consulting services in Architecture and Engineering to help you start your project.
+plantilla.servicio3L1=Advice on Banking Procedures
+plantilla.servicio3L2=Advice on Land Purchase
+plantilla.servicio3L3=Municipal Procedures
+plantilla.servicio3L4=Water Availability Procedures
+
+plantilla.creemos= We believe in
+plantilla.integridad= INTEGRITY, We are distinguished by working correctly. We act with honesty, transparency, respect, and kindness.
+plantilla.culturaServicio= Service Culture
+plantilla.nacimos= We were born to serve and work from the heart. We honor the promises we make to our clients.
+plantilla.sostenibilidad = Sustainability
+plantilla.sostenibilidadP=We are economically, socially, and environmentally responsible, ensuring mutual benefit among our stakeholders.
+plantilla.pasion= Passion for excellence
+plantilla.pasionP=In our processes, we work with the highest quality standards, exceeding customer expectations.
+plantilla.valores=Business Values
+plantilla.valoresP=Integrity, Discipline, Honesty, Seriousness, and Responsibility
+plantilla.innovacion=Innovation with purpose
+plantilla.innovacionP=We believe and dare to develop and adopt new ways of doing things.
 plantilla.consultas=Queries
 plantilla.redes=Social Media
 plantilla.troles=roles
 plantilla.tusuario=User
 plantilla.usuarios=users
 
-
-
-
+proyecto.listado=Projects list
+proyecto.descripcion=Description
+proyecto.activo=Active
+proyecto.rutaImagen=Image
 producto.activo=Active
 producto.agregar=Add Product
 producto.categoria=Category
