--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,6 +19,7 @@ plantilla.inicio=Inicio
 plantilla.derechos= Derechos Reservados 2024
 plantilla.acerca=Acerca de
 plantilla.proyectos=Proyectos
+plantilla.acabados=Personalizaci\u00f3n Acabados
 plantilla.idioma=Idioma
 plantilla.contacto=Contacto
 plantilla.consultas=Consultas
@@ -65,6 +66,17 @@ producto.rutaImagen=Ruta de la im\u00e1gen
 producto.listado=Listado de Productos
 producto.precio=Precio
 producto.total=Total Productos
+contacto.titulo=Cont\u00e1ctanos
+contacto.subtitulo=\u00a1Cont\u00e1ctanos si tienes alguna duda!
+contacto.nombre=Nombre
+contacto.email=Email
+contacto.asunto=Asunto
+contacto.mensaje=Mensaje
+contacto.enviar=Enviar
+login.username=Usuario
+login.password=Contrase\u00f1a
+login.login=Autenticar
+
 pruebas.todas=Todas
 pruebas.precio.superior=Precio Superior
 pruebas.precio.inferior=Precio Inferior
