--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -38,6 +38,7 @@ plantilla.proyectos=Projects
 plantilla.idioma=Languaje
 plantilla.contacto=Contact
 plantilla.galeria=Projects Galery
+plantilla.acabados=Customization Finishes
 plantilla.servicio1=Architecture and Engineering
 plantilla.servicio1P=We offer a variety of services in professional consulting for Architecture and Engineering to help you start your project.
 plantilla.servicio1L1=Construction Plans
@@ -90,6 +91,17 @@ producto.imagen=image path
 producto.listado=Product List
 producto.precio=Price
 producto.total=Total Products
+contacto.titulo=Contact Us
+contacto.subtitulo=Contact us if you have any questions!
+contacto.nombre=Name
+contacto.email=Email
+contacto.asunto=Subject
+contacto.mensaje=Message
+contacto.enviar=Send
+login.username=Username
+login.password=Password
+login.login=Authenticate
+
 pruebas.todas=All
 pruebas.precio.superior=Top Price
 pruebas.precio.inferior=Lowes Price
