--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -30,6 +30,7 @@ plantilla.tusuario=Usuario
 plantilla.usuarios=Usuarios
 plantilla.practica=Practica
 plantilla.galeria=Galer\u00eda Proyectos
+plantilla.acabados=Personalizaci\u00f3n Acabados
 plantilla.servicio1=Arquitectura e Ingener\u00eda
 plantilla.servicio1P=Ofrecemos una variedad de servicios en asesor\u00eda profesional de Arquitectura e Ingenier\u00eda para ayudarte a iniciar tu proyecto.
 plantilla.servicio1L1=Planos Constructivos
@@ -72,6 +73,17 @@ producto.rutaImagen=Ruta de la im\u00e1gen
 producto.listado=Listado de Productos
 producto.precio=Precio
 producto.total=Total Productos
+contacto.titulo=Cont\u00e1ctanos
+contacto.subtitulo=\u00a1Cont\u00e1ctanos si tienes alguna duda!
+contacto.nombre=Nombre
+contacto.email=Email
+contacto.asunto=Asunto
+contacto.mensaje=Mensaje
+contacto.enviar=Enviar
+login.username=Usuario
+login.password=Contrase\u00f1a
+login.login=Autenticar
+
 pruebas.todas=Todas
 pruebas.precio.superior=Precio Superior
 pruebas.precio.inferior=Precio Inferior
